--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('./assets/Mahesh Resume.pdf')"
           >
             Download CV
           </button>
@@ -60,7 +60,7 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='www.linkedin.com/in/mahesh-807121271'"
+            onclick="location.href='https://www.linkedin.com/in/mahesh-807121271'"
           />
           <img
             src="./assets/github.png"
