--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://www.linkedin.com/in/mahesh-807121271'"
+            onclick="location.href='https://linkedin.com/in/mahesh-807121271'"
           />
           <img
             src="./assets/github.png"
