--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
           <li><a href="#experience">Experience</a></li>
-          <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
@@ -84,7 +83,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>1+ years <br />Full Stack Development</p>
+              <p>1+ years <br />Full Stack Web Development</p>
             </div>
             <div class="details-container">
               <img
@@ -248,12 +247,6 @@
           </div>
         </div>
       </div>
-      <img
-        src="./assets/arrow.png"
-        alt="Arrow icon"
-        class="icon arrow"
-        onclick="location.href='./#projects'"
-      />
     </section>
     <section id="contact">
       <p class="section__text__p1">Get in Touch</p>
@@ -283,7 +276,6 @@
           <ul class="nav-links">
             <li><a href="#about">About</a></li>
             <li><a href="#experience">Experience</a></li>
-            <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
