--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <p class="section__text__p1">Explore My</p>
       <h1 class="title">Experience</h1>
       <div class="experience-details-container">
-        <div class="about-containers">
+
           <div class="details-container">
             <h2 class="experience-sub-title">Frontend Development</h2>
             <div class="article-container">
@@ -186,7 +186,7 @@
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
+            <h2 class="experience-sub-title">Backend Development</h2>
             <div class="article-container">
               <article>
                 <img
@@ -245,7 +245,7 @@
               </article>
             </div>
           </div>
-        </div>
+
       </div>
     </section>
     <section id="contact">
