--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           </div>
           <div class="text-container">
             <p>
-              Seeking a position as an entry level full stack developer where i can leverage my expertise in developing database schema and objects, creating REST API's and optimizing product development. With my knowledge of relational database systems, technical documentation creation and troubleshooting experiences, I am confident i can ensure quality developement and support processes.
+              Dynamic Entry-Level Full Stack Developer with a solid foundation in both front-end and back-end technologies. Skilled in database schema development, REST API creation, and product optimization. Eager to leverage coding, troubleshooting, and database management skills to drive successful project outcomes and contribute to business growth.
             </p>
           </div>
         </div>
